--- a/questions.html
+++ b/questions.html
@@ -65,106 +65,108 @@
             <form action="">
 
                 <div class="row">
+                    <div class="corainate">
+                        <div class="col-12 question">
+                            <p>هذا النص هو مثال لنص يمكن أن يستبدل في نفس المساحة، لقد تم توليد هذا النص من مولد النص العربى، حيث يمكنك أن تولد مثل هذا النص أو العديد من النصوص الأخرى
+                            </p>
 
-                    <div class="col-12 question">
-                        <p>هذا النص هو مثال لنص يمكن أن يستبدل في نفس المساحة، لقد تم توليد هذا النص من مولد النص العربى، حيث يمكنك أن تولد مثل هذا النص أو العديد من النصوص الأخرى
-                        </p>
+                            <div class="options">
+                                <div class="option">
+                                    <input type="radio" class="btn-check" name="questions1" id="option1" autocomplete="off" value="1">
+                                    <label class="btn btn-outline-success" for="option1">سؤال متعدد الاجوبة</label>
+                                </div>
+                                <div class="option">
+                                    <input type="radio" class="btn-check" name="questions1" id="option2" autocomplete="off" value="1">
+                                    <label class="btn btn-outline-success" for="option2">سؤال متعدد الاجوبة</label>
+                                </div>
+                                <div class="option">
+                                    <input type="radio" class="btn-check" name="questions1" id="option3" autocomplete="off" value="1">
+                                    <label class="btn btn-outline-success" for="option3">سؤال متعدد الاجوبة</label>
+                                </div>
+                                <div class="option">
+                                    <input type="radio" class="btn-check" name="questions1" id="option4" autocomplete="off" value="1">
+                                    <label class="btn btn-outline-success" for="option4">سؤال متعدد الاجوبة</label>
+                                </div>
+                            </div>
 
-                        <div class="options">
-                            <div class="option">
-                                <input type="radio" class="btn-check" name="questions1" id="option1" autocomplete="off" value="1">
-                                <label class="btn btn-outline-success" for="option1">سؤال متعدد الاجوبة</label>
-                            </div>
-                            <div class="option">
-                                <input type="radio" class="btn-check" name="questions1" id="option2" autocomplete="off" value="1">
-                                <label class="btn btn-outline-success" for="option2">سؤال متعدد الاجوبة</label>
-                            </div>
-                            <div class="option">
-                                <input type="radio" class="btn-check" name="questions1" id="option3" autocomplete="off" value="1">
-                                <label class="btn btn-outline-success" for="option3">سؤال متعدد الاجوبة</label>
-                            </div>
-                            <div class="option">
-                                <input type="radio" class="btn-check" name="questions1" id="option4" autocomplete="off" value="1">
-                                <label class="btn btn-outline-success" for="option4">سؤال متعدد الاجوبة</label>
-                            </div>
                         </div>
 
-                    </div>
+                        <div class="col-12 question">
+                            <p>هذا النص هو مثال لنص يمكن أن يستبدل في نفس المساحة، لقد تم توليد هذا النص من مولد النص العربى، حيث يمكنك أن تولد مثل هذا النص أو العديد من النصوص الأخرى
+                            </p>
 
-                    <div class="col-12 question">
-                        <p>هذا النص هو مثال لنص يمكن أن يستبدل في نفس المساحة، لقد تم توليد هذا النص من مولد النص العربى، حيث يمكنك أن تولد مثل هذا النص أو العديد من النصوص الأخرى
-                        </p>
+                            <div class="options">
+                                <div class="option">
+                                    <input type="radio" class="btn-check" name="questions2" id="option5" autocomplete="off" value="1">
+                                    <label class="btn btn-outline-success" for="option5">سؤال متعدد الاجوبة</label>
+                                </div>
+                                <div class="option">
+                                    <input type="radio" class="btn-check" name="questions2" id="option6" autocomplete="off" value="1">
+                                    <label class="btn btn-outline-success" for="option6">سؤال متعدد الاجوبة</label>
+                                </div>
+                                <div class="option">
+                                    <input type="radio" class="btn-check" name="questions2" id="option7" autocomplete="off" value="1">
+                                    <label class="btn btn-outline-success" for="option7">سؤال متعدد الاجوبة</label>
+                                </div>
+                                <div class="option">
+                                    <input type="radio" class="btn-check" name="questions2" id="option8" autocomplete="off" value="1">
+                                    <label class="btn btn-outline-success" for="option8">سؤال متعدد الاجوبة</label>
+                                </div>
+                            </div>
 
-                        <div class="options">
-                            <div class="option">
-                                <input type="radio" class="btn-check" name="questions2" id="option5" autocomplete="off" value="1">
-                                <label class="btn btn-outline-success" for="option5">سؤال متعدد الاجوبة</label>
-                            </div>
-                            <div class="option">
-                                <input type="radio" class="btn-check" name="questions2" id="option6" autocomplete="off" value="1">
-                                <label class="btn btn-outline-success" for="option6">سؤال متعدد الاجوبة</label>
-                            </div>
-                            <div class="option">
-                                <input type="radio" class="btn-check" name="questions2" id="option7" autocomplete="off" value="1">
-                                <label class="btn btn-outline-success" for="option7">سؤال متعدد الاجوبة</label>
-                            </div>
-                            <div class="option">
-                                <input type="radio" class="btn-check" name="questions2" id="option8" autocomplete="off" value="1">
-                                <label class="btn btn-outline-success" for="option8">سؤال متعدد الاجوبة</label>
-                            </div>
                         </div>
 
-                    </div>
+                        <div class="col-12 question">
+                            <p>هذا النص هو مثال لنص يمكن أن يستبدل في نفس المساحة، لقد تم توليد هذا النص من مولد النص العربى، حيث يمكنك أن تولد مثل هذا النص أو العديد من النصوص الأخرى
+                            </p>
 
-                    <div class="col-12 question">
-                        <p>هذا النص هو مثال لنص يمكن أن يستبدل في نفس المساحة، لقد تم توليد هذا النص من مولد النص العربى، حيث يمكنك أن تولد مثل هذا النص أو العديد من النصوص الأخرى
-                        </p>
+                            <div class="options">
+                                <div class="option">
+                                    <input type="radio" class="btn-check" name="questions3" id="option9" autocomplete="off" value="1">
+                                    <label class="btn btn-outline-success" for="option9">سؤال متعدد الاجوبة</label>
+                                </div>
+                                <div class="option">
+                                    <input type="radio" class="btn-check" name="questions3" id="option10" autocomplete="off" value="1">
+                                    <label class="btn btn-outline-success" for="option10">سؤال متعدد الاجوبة</label>
+                                </div>
+                                <div class="option">
+                                    <input type="radio" class="btn-check" name="questions3" id="option11" autocomplete="off" value="1">
+                                    <label class="btn btn-outline-success" for="option11">سؤال متعدد الاجوبة</label>
+                                </div>
+                                <div class="option">
+                                    <input type="radio" class="btn-check" name="questions3" id="option12" autocomplete="off" value="1">
+                                    <label class="btn btn-outline-success" for="option12">سؤال متعدد الاجوبة</label>
+                                </div>
+                            </div>
 
-                        <div class="options">
-                            <div class="option">
-                                <input type="radio" class="btn-check" name="questions3" id="option9" autocomplete="off" value="1">
-                                <label class="btn btn-outline-success" for="option9">سؤال متعدد الاجوبة</label>
-                            </div>
-                            <div class="option">
-                                <input type="radio" class="btn-check" name="questions3" id="option10" autocomplete="off" value="1">
-                                <label class="btn btn-outline-success" for="option10">سؤال متعدد الاجوبة</label>
-                            </div>
-                            <div class="option">
-                                <input type="radio" class="btn-check" name="questions3" id="option11" autocomplete="off" value="1">
-                                <label class="btn btn-outline-success" for="option11">سؤال متعدد الاجوبة</label>
-                            </div>
-                            <div class="option">
-                                <input type="radio" class="btn-check" name="questions3" id="option12" autocomplete="off" value="1">
-                                <label class="btn btn-outline-success" for="option12">سؤال متعدد الاجوبة</label>
-                            </div>
                         </div>
 
-                    </div>
+                        <div class="col-12 question">
+                            <p>هذا النص هو مثال لنص يمكن أن يستبدل في نفس المساحة، لقد تم توليد هذا النص من مولد النص العربى، حيث يمكنك أن تولد مثل هذا النص أو العديد من النصوص الأخرى
+                            </p>
 
-                    <div class="col-12 question">
-                        <p>هذا النص هو مثال لنص يمكن أن يستبدل في نفس المساحة، لقد تم توليد هذا النص من مولد النص العربى، حيث يمكنك أن تولد مثل هذا النص أو العديد من النصوص الأخرى
-                        </p>
+                            <div class="options">
+                                <div class="option">
+                                    <input type="radio" class="btn-check" name="questions4" id="option13" autocomplete="off" value="1">
+                                    <label class="btn btn-outline-success" for="option13">سؤال متعدد الاجوبة</label>
+                                </div>
+                                <div class="option">
+                                    <input type="radio" class="btn-check" name="questions4" id="option14" autocomplete="off" value="1">
+                                    <label class="btn btn-outline-success" for="option14">سؤال متعدد الاجوبة</label>
+                                </div>
+                                <div class="option">
+                                    <input type="radio" class="btn-check" name="questions4" id="option15" autocomplete="off" value="1">
+                                    <label class="btn btn-outline-success" for="option15">سؤال متعدد الاجوبة</label>
+                                </div>
+                                <div class="option">
+                                    <input type="radio" class="btn-check" name="questions4" id="option16" autocomplete="off" value="1">
+                                    <label class="btn btn-outline-success" for="option16">سؤال متعدد الاجوبة</label>
+                                </div>
+                            </div>
 
-                        <div class="options">
-                            <div class="option">
-                                <input type="radio" class="btn-check" name="questions4" id="option13" autocomplete="off" value="1">
-                                <label class="btn btn-outline-success" for="option13">سؤال متعدد الاجوبة</label>
-                            </div>
-                            <div class="option">
-                                <input type="radio" class="btn-check" name="questions4" id="option14" autocomplete="off" value="1">
-                                <label class="btn btn-outline-success" for="option14">سؤال متعدد الاجوبة</label>
-                            </div>
-                            <div class="option">
-                                <input type="radio" class="btn-check" name="questions4" id="option15" autocomplete="off" value="1">
-                                <label class="btn btn-outline-success" for="option15">سؤال متعدد الاجوبة</label>
-                            </div>
-                            <div class="option">
-                                <input type="radio" class="btn-check" name="questions4" id="option16" autocomplete="off" value="1">
-                                <label class="btn btn-outline-success" for="option16">سؤال متعدد الاجوبة</label>
-                            </div>
                         </div>
-
                     </div>
+
 
                     <div class="col-12">
                         <nav aria-label="...">
@@ -218,6 +220,26 @@
             </div>
         </div>
     </section>
+
+    <footer class="d-md-none">
+        <div class="container">
+            <div class="row">
+                <div class="col-12 text-center" id="social-media-icons">
+
+                    <i class="fab fa-twitter"></i>
+
+                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
+          <path id="icons8-instagram_1_" data-name="icons8-instagram (1)"
+            d="M10,3a7.008,7.008,0,0,0-7,7V20a7.008,7.008,0,0,0,7,7H20a7.008,7.008,0,0,0,7-7V10a7.008,7.008,0,0,0-7-7ZM22,7a1,1,0,1,1-1,1A1,1,0,0,1,22,7ZM15,9a6,6,0,1,1-6,6A6.006,6.006,0,0,1,15,9Zm0,2a4,4,0,1,0,4,4,4,4,0,0,0-4-4Z"
+            transform="translate(-3 -3)" fill="#c9c9c9" />
+        </svg>
+
+                    <i class="fab fa-facebook-square"></i>
+
+                </div>
+            </div>
+        </div>
+    </footer>
 
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
