--- a/index.html
+++ b/index.html
@@ -21,12 +21,18 @@
         <div class="container">
             <nav id="top-nav" class="d-flex justify-content-between align-items-center w-100">
 
-                <div class="how-to-use d-flex flex-column flex-md-row align-items-center">
-                    <div class="circle d-flex justify-content-center align-items-center">
-                        <i class="fas fa-play"></i>
+                <button type="submit" class="btn btn-success btn-save">
+                    <div class="blur deep-green-blur"></div>
+                    <div class="has-blur text-blur">تسجيل الدخول</div>
+                  </button>
+                <!-- <div class="person-img d-flex justify-content-center align-items-center">
+                    <img src="img/person.jpg" alt="" class="rounded-circle">
+                    <div class="logout">
+                        <p>فراس فرج</p>
+                        <a href="#">تسجيل الخروج</a>
                     </div>
-                    <span>كيفية أستخدام المنصة</span>
-                </div>
+                </div> -->
+
 
                 <div class="social-media d-none d-md-block">
                     <div class="icons d-flex justify-content-around align-items-center">
@@ -70,7 +76,6 @@
                     </div>
                 </div>
             </div>
-
             <div class="row" id="images-hero-row">
                 <div class="col-3 d-none d-md-block">
                     <img src="img/std2.png" alt="">
@@ -80,7 +85,7 @@
                         <div class="circle-exam">
                             <i class="fas fa-play"></i>
                         </div>
-                        <span>بدء الإختبار</span>
+                        <span>فيديو ارشادي</span>
                     </a>
                     <div class="black-border"></div>
                     <div class="about-exam">
