--- a/profile.html
+++ b/profile.html
@@ -21,11 +21,12 @@
         <div class="container">
             <nav id="top-nav" class="d-flex justify-content-between align-items-center w-100">
 
-                <div class="how-to-use d-flex flex-column flex-md-row align-items-center">
-                    <div class="circle d-flex justify-content-center align-items-center">
-                        <i class="fas fa-play"></i>
+                <div class="person-img d-flex justify-content-center align-items-center">
+                    <img src="img/person.jpg" alt="" class="rounded-circle">
+                    <div class="logout">
+                        <p>فراس فرج</p>
+                        <a href="#">تسجيل الخروج</a>
                     </div>
-                    <span>كيفية أستخدام المنصة</span>
                 </div>
 
                 <div class="social-media d-none d-md-block">
