--- a/register.html
+++ b/register.html
@@ -27,7 +27,6 @@
                     </div>
                     <span>كيفية أستخدام المنصة</span>
                 </div>
-
                 <div class="social-media d-none d-md-block">
                     <div class="icons d-flex justify-content-around align-items-center">
                         <a href="#">
@@ -50,7 +49,6 @@
                 <div class="logo d-flex">
                     <img src="img/text-logo.svg" alt="">
                 </div>
-
             </nav>
             <hr>
         </div>
@@ -156,6 +154,9 @@
 
                         <div class="form-group col-12 col-md-3 p-0 submit">
                             <button type="submit" class="btn btn-primary">تسجيل</button>
+                        </div>
+                        <div class="form-group login">
+                            <span>لديك حساب بالفعل ؟</span> <a href="#">تسجيل الدخول</a>
                         </div>
                     </div>
 
